# wot-thing-description-toolchain-tmp

./: .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  wot_security.yaml
.github/workflows/: deploy-docs.yaml  main.yaml  pypi-publish.yaml
ActionAffordance/: index.html
AdditionalExpectedResponse/: index.html
DataSchema/: index.html
EventAffordance/: index.html
ExpectedResponse/: index.html
Form/: index.html
InteractionAffordance/: index.html
Link/: index.html
MultiLanguage/: index.html
PropertyAffordance/: index.html
SecurityScheme/: index.html
Thing/: index.html
VersionInfo/: index.html
contentType/: index.html
description/: index.html
descriptionInLanguage/: index.html
descriptions/: index.html
forms/: index.html
name/: index.html
project/excel/: thing_description_schema.xlsx
project/graphql/: thing_description_schema.graphql
project/jsonld/: thing_description_schema.context.jsonld  thing_description_schema.jsonld
project/jsonschema/: thing_description_schema.schema.json
project/owl/: thing_description_schema.owl.ttl
project/prefixmap/: thing_description_schema.yaml
project/protobuf/: thing_description_schema.proto
project/shacl/: thing_description_schema.shacl.ttl
project/shex/: thing_description_schema.shex
resources/: index.template.html  thing_description_schema.yaml
resources/gens/: README.md
resources/ground-truth-schemas/: td-json-schema-validation.json  tm-json-schema-validation.json
resources/jinja_templates/: class_section.jinja2  class_table.jinja2  thing_table.jinja2
resources/manuals/: test.jsonld
resources/schemas/: README.md  hctl.yaml  hypermedia.yaml  jsonschema.yaml  thing_description.yaml  thing_description_schema.yaml  wot_security.yaml  wot_security_schema.yaml
resources/snippets/: TEMPLATE.json  TEMPLATE.jsonc  TEMPLATE.meta.yaml  action-serialization.jsonc  basic-on-off-tm.json  basic-on-off-tm.jsonc  basic-on-off-tm.meta.yaml  context-extensions.jsonc  dataschema-readonly-writeonly.jsonc  dataschema-serialization.jsonc  event-serialization.jsonc  form-additional-responses.jsonc  form-content-media-encoding.jsonc  form-content-type.jsonc  form-http-invokeaction.jsonc  form-http-readproperty.jsonc  form-modbus-readproperty.jsonc  form-mqtt-subscribeevent.jsonc  form-response.jsonc  (+114 more)
search/: search_index.json
securityDefinitions/: index.html
src/: __init__.py  cli.py
tests/: README.md  run_tests.py  test_default_assignments.py  test_golden_form_structure.py  test_spec_content_rendering.py
title/: index.html
titleInLanguage/: index.html
titles/: index.html
uriVariables/: index.html
(+357 files in other folders)
