[project]
name = "wotis"
version = "0.1.0"
description = "A CLI for Web of Things Integrated Schemas (WOTIS)"
authors = [
    { name = "Mahda Noura", email = "mahda.noura@siemens.com" }
]
license = "MIT"
readme = "README.md"
include = ["README.md", "resources/schemas/*"]
requires-python = ">=3.11, <=3.13"
dependencies = [
    "linkml-runtime>=1.9.2",
    "linkml>=1.9.2",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-material>=9.5.32",
    "schemasheets>=0.3.1",
    "jsonschema>=4.21.1",
    "rich>=13.7.0"
]

[project.optional-dependencies]
cli = [
    "click>=8.1.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["src/wotis/cli.py"]

[tool.hatch.metadata]
root = "src"

[project.scripts]
wotis = "src.wotis.cli:main"
