[project]
name = "wotis"
version = "0.1.0"
description = "The CLI tool for Web of Things Integrated Schemas (WOTIS)"
authors = [
    { name = "Mahda Noura", email = "mahda.noura@siemens.com" }
]
license = "MIT"
readme = "README.md"
include = ["README.md", "resources/schemas/*"]
requires-python = ">=3.14"
dependencies = [
    "linkml>=1.10.0",
    "mkdocs-mermaid2-plugin==1.2.3",
    "mkdocs-material>=9.7.6",
    "schemasheets>=0.1.10",
    "jsonschema>=4.21.1",
    "rich>=13.7.0",
    "pyld>=3.0.0",
    "colorama>=0.4.6",
    "lxml>=6.1.0",
    "cssselect>=1.4.0",
    "bikeshed>=7.0.11",
    "click>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["src/wotis"]

[tool.hatch.metadata]
root = "src"

[project.scripts]
wotis = "src.wotis.cli:main"
